# MLOps

./: .gitignore  README.md
.github/workflows/: tests.yaml
s1_development_environment/m2_package_manager/my_project/: pyproject.toml  test_dependencies.py
s2_organization_and_version_control/: main.py  pyproject.toml
s2_organization_and_version_control/m5_git/: 1_Tensors_in_PyTorch.ipynb  notes.txt
s2_organization_and_version_control/m6_code_structure/MLOps/: README.md  pyproject.toml  tasks.py
s2_organization_and_version_control/m6_code_structure/MLOps/.devcontainer/: devcontainer.json
s2_organization_and_version_control/m6_code_structure/MLOps/dockerfiles/: api.dockerfile  train.dockerfile
s2_organization_and_version_control/m6_code_structure/MLOps/docs/: mkdocs.yaml
s2_organization_and_version_control/m6_code_structure/MLOps/models/: model.pth
s2_organization_and_version_control/m6_code_structure/MLOps/tests/: test_data.py
s2_organization_and_version_control/m9_command_line_interfaces/MLOps/: README.md  model.ckpt  pyproject.toml  tasks.py
s2_organization_and_version_control/m9_command_line_interfaces/MLOps/.devcontainer/: devcontainer.json
s2_organization_and_version_control/m9_command_line_interfaces/MLOps/dockerfiles/: api.dockerfile  train.dockerfile
s2_organization_and_version_control/m9_command_line_interfaces/MLOps/docs/: mkdocs.yaml
s2_organization_and_version_control/m9_command_line_interfaces/MLOps/tests/: test_data.py
s4_debugging_profiling_logging/: main.py  pyproject.toml
s4_debugging_profiling_logging/m13_profiling/: profile.prof  profile.txt  pytorch_profiler_example.py  read_profile.py  trace.json  vae_mnist_working.py  vae_mnist_working_profiling.py
s4_debugging_profiling_logging/m13_profiling/log/resnet18/: DESKTOP-7UGA8HT_11408.1768319556954285200.pt.trace.json  DESKTOP-7UGA8HT_21820.1768319442278344700.pt.trace.json
s4_debugging_profiling_logging/m13_profiling/log/vae_mnist/: DESKTOP-7UGA8HT_6420.1768320007490253700.pt.trace.json
s4_debugging_profiling_logging/m14_logging/: main_solution.py  model.pth  my_logger.py  sweep.yaml  wandb.docker
s4_debugging_profiling_logging/m14_logging/wandb/run-20260113_173207-i5nqkwqd/: run-i5nqkwqd.wandb
s4_debugging_profiling_logging/m14_logging/wandb/run-20260113_173614-862tz87x/: run-862tz87x.wandb
s4_debugging_profiling_logging/m14_logging/wandb/run-20260113_174120-b0jik9ot/: run-b0jik9ot.wandb
s4_debugging_profiling_logging/m14_logging/wandb/run-20260113_180428-1dnx9mtg/: run-1dnx9mtg.wandb
s4_debugging_profiling_logging/m14_logging/wandb/run-20260113_180629-0sgeyqa1/: run-0sgeyqa1.wandb
s4_debugging_profiling_logging/m14_logging/wandb/run-20260113_180833-kzfurzux/: run-kzfurzux.wandb
s4_debugging_profiling_logging/m14_logging/wandb/run-20260113_180950-azqafqes/: run-azqafqes.wandb
s4_debugging_profiling_logging/m14_logging/wandb/run-20260113_181201-i1cdhh6c/: run-i1cdhh6c.wandb
s4_debugging_profiling_logging/m14_logging/wandb/run-20260113_181741-e1kzx6uv/: run-e1kzx6uv.wandb
s4_debugging_profiling_logging/m14_logging/wandb/run-20260113_181849-lolvdv3n/: run-lolvdv3n.wandb
s4_debugging_profiling_logging/m14_logging/wandb/run-20260113_182049-uff2gidq/: run-uff2gidq.wandb
s4_debugging_profiling_logging/m14_logging/wandb/run-20260113_182310-ku1pejyf/: run-ku1pejyf.wandb
s4_debugging_profiling_logging/m14_logging/wandb/sweep-i2vlrkh5/: config-egy4j9ln.yaml  config-quz0kb04.yaml  config-w831ocv8.yaml
s4_debugging_profiling_logging/m14_logging/wandb/sweep-rjull899/: config-0sgeyqa1.yaml  config-1dnx9mtg.yaml  config-azqafqes.yaml  config-e1kzx6uv.yaml  config-i1cdhh6c.yaml  config-ku1pejyf.yaml  config-kzfurzux.yaml  config-lolvdv3n.yaml  config-uff2gidq.yaml  config-w0hjph35.yaml
s4_debugging_profiling_logging/m14_logging/wandb/sweep-t0du4bm1/: config-q0xbuh6p.yaml  config-r3enkbu0.yaml  config-ytjkst46.yaml
s4_debugging_profiling_logging/s4_debugging/: README.md  pyproject.toml  tasks.py
s4_debugging_profiling_logging/s4_debugging/.devcontainer/: devcontainer.json
s4_debugging_profiling_logging/s4_debugging/dockerfiles/: api.dockerfile  train.dockerfile
s4_debugging_profiling_logging/s4_debugging/docs/: mkdocs.yaml
s4_debugging_profiling_logging/s4_debugging/docs/source/: index.md
s4_debugging_profiling_logging/s4_debugging/src/s4_debugging/: train.py
s4_debugging_profiling_logging/s4_debugging/tests/: test_data.py
s5_continuous_integration/mlops/: README.md  pyproject.toml  tasks.py
s5_continuous_integration/mlops/.devcontainer/: devcontainer.json
s5_continuous_integration/mlops/dockerfiles/: api.dockerfile  train.dockerfile
s5_continuous_integration/mlops/docs/: mkdocs.yaml
s5_continuous_integration/mlops/docs/source/: index.md
s5_continuous_integration/mlops/src/s5_ci/: data.py  train.py
s5_continuous_integration/mlops/tests/: test_data.py  test_model.py  test_train.py
(+67 files in other folders)
